# kz-auth

./: .gitignore  Cargo.toml  cert.pem  docker-compose.yaml  key.pem
migrations/2022-07-24-213219_create_user/: down.sql  up.sql
src/: database.rs  hashing.rs  local_env.rs  main.rs  models.rs  schema.rs
src/health/: mod.rs
src/users/: database.rs  mod.rs  session.rs
